<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="Localization">
	<ListPreference android:key="lang" android:title="@string/LangTitle" android:summary="@string/LangSummary" android:entries="@array/entries_lang" android:entryValues="@array/entryvalues_lang" android:dialogTitle="@string/LangDialogTitle"/>        
    </PreferenceCategory>
	<PreferenceCategory android:title="@string/pref_account">        
        <EditTextPreference android:title="@string/pref_uname" android:key="username" android:defaultValue="user"/>
        <EditTextPreference android:title="@string/pref_pass" android:key="password" android:defaultValue="pin"/>
        <EditTextPreference android:key="trackid" android:summary="ID of default track" android:title="TrackID" android:enabled="true" android:selectable="true" android:shouldDisableView="true"/>
     </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_sending">     
        <CheckBoxPreference android:key="autosend" android:summary="@string/pref_auto" android:title="Auto" android:defaultValue="true" android:selectable="true" android:enabled="true"/>
        <EditTextPreference android:key="deltasecs" android:summary="@string/pref_deltasecs_summary" android:title="@string/pref_deltasecs_title" android:defaultValue="120" android:enabled="true" android:selectable="true" android:inputType="numberDecimal"/>
        <EditTextPreference android:key="deltametres" android:summary="@string/pref_delta_summary" android:title="@string/pref_delta_title" android:defaultValue="1000" android:enabled="true" android:selectable="true" android:inputType="numberDecimal"/>
        <ListPreference android:key="method" android:title="@string/pref_method_summary" android:summary="@string/pref_method_title" android:defaultValue="auto" android:entries="@array/methodListArray" android:entryValues="@array/methodListValues"/>
        <ListPreference android:key="phone" android:title="@string/pref_phone_summary" android:summary="@string/pref_phone_title" android:defaultValue="79237377623" android:entries="@array/phoneListArray" android:entryValues="@array/phoneListValues"/>
     </PreferenceCategory>        
    <PreferenceCategory android:title="File system">        
        <EditTextPreference android:key="extpath" android:title="Path" android:summary="@string/pref_place_summary" android:defaultValue="/mnt/extsd"/>        
        <Preference android:key="prevla" android:shouldDisableView="true" android:selectable="false"/>
        <Preference android:key="prevlo" android:shouldDisableView="true" android:selectable="false"/>
		<Preference android:key="lastPath" android:shouldDisableView="true" android:selectable="false"/>                                     
    </PreferenceCategory>    
</PreferenceScreen>